@@ -36,6 +36,7 @@ usage() {
     echo "    -u username     Username for SSH login"
     echo "    -b dir          Backup storage directory"
     echo "    -l label        Label used when backup was performed"
+    echo "    -v              Display details of the backup"
     echo
     echo "    -?              Print help"
     echo
@@ -48,12 +49,13 @@ error() {
 }
 
 # Process CLI Options
-while getopts "Lu:b:l:?" opt; do
+while getopts "Lu:b:l:v?" opt; do
     case "$opt" in
 	L) local_backup="yes";;
 	u) ssh_user=$OPTARG;;
 	b) backup_root=$OPTARG;;
 	l) label_prefix=$OPTARG;;
+	v) verbose="yes";;
 	"?") usage 1;;
 	*) error "error while processing options";;
     esac
@@ -75,7 +77,7 @@ if [ $local_backup = "yes" ]; then
     fi
 
     # Print a header
-    echo -e "List of local backups:\n"
+    echo "List of local backups"
 else
     list=`ssh ${ssh_user:+$ssh_user@}$host "ls -d $backup_root/$label_prefix/[0-9]*" 2>/dev/null`
     if [ $? != 0 ]; then
@@ -83,19 +85,33 @@ else
     fi
 
     # Print a header
-    echo -e "List of backups on $host:\n"
+    echo "List of backups on $host"
 fi
 
 # Print the directory and stop time of each backup
 for dir in $list; do
     # Print the details of the backup dir
-    echo -e "Directory:\n  $dir"
+    if [ -n "$verbose" ]; then
+	echo "----------------------------------------------------------------------"
+	echo -e "Directory:\n  $dir"
+    else
+	echo -ne "$dir\t"
+    fi
 
     st=0
     # Get the exact stop date from the backup label
     if [ $local_backup = "yes" ]; then
+	# Compute the size of full backup
+	backup_size=`du -sh $dir | awk '{ print $1 }'`
+	if [ -n "$verbose" ]; then
+	    echo "  space used: $backup_size"
+	else
+	    echo -ne "$backup_size\t"
+	fi
+
+	# Print the minimum recovery target time with this backup
 	if [ -f $dir/backup_label ]; then
-	    echo "Minimum recovery target time:"
+	    [ -n "$verbose" ] && echo "Minimum recovery target time:"
 	    grep "STOP TIME:" $dir/backup_label | sed -e 's/STOP TIME: /  /'
 	    if [ $? != 0 ]; then
 		echo "ERROR: could not find the \"stop time\" in the backup_label file" 1>&2
@@ -106,22 +122,48 @@ for dir in $list; do
 	    st=1
 	fi
 
-	if [ -f $dir/tblspc_list ]; then
-	    echo "Tablespaces:"
-	    awk -F'|' '{ print "  "$1" "$2" ("$3")" }' $dir/tblspc_list
-	    if [ $? != 0 ]; then
-		echo "ERROR: could not display the list of tablespaces" 1>&2
+	if [ -n "$verbose" ]; then
+	    # Display name, path and sizes of PGDATA and tablespaces
+	    if [ -f $dir/tblspc_list ]; then
+		# Only show sizes of PGDATA if available
+		if [ -n "`awk -F'|' '{ print $4 }' $dir/tblspc_list`" ]; then
+		    echo "PGDATA:"
+		    awk -F'|' '$2 == "" { print "  "$1" "$4 }' $dir/tblspc_list
+		    if [ $? != 0 ]; then
+			echo "ERROR: could not display the list of tablespaces" 1>&2
+			st=1
+		    fi
+		fi
+		echo "Tablespaces:"
+		awk -F'|' '$2 != "" { print "  \""$1"\" "$2" ("$3") "$4 }' $dir/tblspc_list
+		if [ $? != 0 ]; then
+		    echo "ERROR: could not display the list of tablespaces" 1>&2
+		    st=1
+		fi
+		echo
+	    else
+		echo "ERROR: could not find the list of tablespaces (tblspc_list)" 1>&2
 		st=1
 	    fi
-	    echo
-	else
-	    echo "ERROR: could not find the list of tablespaces (tblspc_list)" 1>&2
-	    st=1
 	fi
     else
+	# Backup size
+	backup_size=`ssh ${ssh_user:+$ssh_user@}$host "du -sh $dir" 2>/dev/null | awk '{ print \$1 }'`
+	if [ $? = 0 ]; then
+	    if [ -n "$verbose" ]; then
+		echo "  space used: $backup_size"
+	    else
+		echo -ne "$backup_size\t"
+	    fi
+	else
+	    echo "ERROR: could not find size of $backup_dir" 1>&2
+	    st=1
+	fi
+
+	# Minimum recovery target time
 	ssh ${ssh_user:+$ssh_user@}$host "test -f $dir/backup_label" 2>/dev/null
 	if [ $? = 0 ]; then
-	    echo "Minimum recovery target time:"
+	    [ -n "$verbose" ] && echo "Minimum recovery target time:"
 	    ssh ${ssh_user:+$ssh_user@}$host "cat $dir/backup_label" 2>/dev/null | grep "STOP TIME:" | sed -e 's/STOP TIME: /  /'
 	    rc=(${PIPESTATUS[*]})
 	    ssh_rc=${rc[0]}
@@ -135,26 +177,39 @@ for dir in $list; do
 	    st=1
 	fi
 
-	ssh ${ssh_user:+$ssh_user@}$host "test -f $dir/tblspc_list" 2>/dev/null
-	if [ $? = 0 ]; then
-	    echo "Tablespaces:"
-	    ssh ${ssh_user:+$ssh_user@}$host "cat $dir/tblspc_list" 2>/dev/null | awk -F'|' '{ print "  "$1" "$2" ("$3")" }'
-	    rc=(${PIPESTATUS[*]})
-	    ssh_rc=${rc[0]}
-	    if [ $ssh_rc != 0 ]; then
-		echo "ERROR: could not display the list of tablespaces" 1>&2
+	# Name, path and space used at backup time of PGDATA and tablespaces
+	if [ -n "$verbose" ]; then
+	    ssh ${ssh_user:+$ssh_user@}$host "test -f $dir/tblspc_list" 2>/dev/null
+	    if [ $? = 0 ]; then
+		if [ -n "`ssh ${ssh_user:+$ssh_user@}$host "cat $dir/tblspc_list" 2>/dev/null | awk -F'|' '{ print $4 }'`" ]; then
+		    echo "PGDATA:"
+		    ssh ${ssh_user:+$ssh_user@}$host "cat $dir/tblspc_list" 2>/dev/null | awk -F'|' '$2 == "" { print "  "$1" "$4 }'
+		    rc=(${PIPESTATUS[*]})
+		    ssh_rc=${rc[0]}
+		    if [ $ssh_rc != 0 ]; then
+			echo "ERROR: could not display the list of tablespaces" 1>&2
+			st=1
+		    fi
+		fi
+
+		echo "Tablespaces:"
+		ssh ${ssh_user:+$ssh_user@}$host "cat $dir/tblspc_list" 2>/dev/null | awk -F'|' '$2 != "" { print "  \""$1"\" "$2" ("$3") "$4 }'
+		rc=(${PIPESTATUS[*]})
+		ssh_rc=${rc[0]}
+		if [ $ssh_rc != 0 ]; then
+		    echo "ERROR: could not display the list of tablespaces" 1>&2
+		    st=1
+		fi
+		echo
+	    else
+		echo "ERROR: could not find the list of tablespaces (tblspc_list)" 1>&2
 		st=1
 	    fi
-	    echo
-	else
-	    echo "ERROR: could not find the list of tablespaces (tblspc_list)" 1>&2
-	    st=1
 	fi
     fi
 
     if [ $st != 0 ]; then
-	echo -e "!!! This backup may be imcomplete or corrupted !!!\n"
+	echo "!!! This backup may be imcomplete or corrupted !!!"
     fi
-
 done
 
